<resources>
    <string name="app_name">FallWatch</string>
    <string name="welcome">Welcome!</string>
    <string name="detecting">Detecting.</string>
    <string name="fillInInfo">Please fill in your information so that we can help you the best way we can.</string>
    <string name="yourName">Name:</string>
    <string name="contact1">Contact 1:</string>
    <string name="contact2">Contact 2:</string>
    <string name="apply">Apply</string>
    <string name="savedToPreferences">Saved information</string>
    <string name="typeNumberYourSelf">Do you want select the number from your contacts?</string>
    <string name="contactPhoneNumber">Contact phone number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alerting">Sending alert!</string>
    <string name="titleHome">Home</string>
    <string name="titleAbout">About FallWatch</string>
    <string name="titleSettings">Settigns</string>
    <string name="titleContacts">Contacts</string>
    <string name="titleHelp">Help</string>
    <string name="labelRegister">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sensorInternal">Internal sensor</string>
    <string name="sensorExternal">External sensor</string>
    <string name="sensors">Sensors</string>
    <string name="confirm_condition">Please confirm if your are okay.</string>
    <string name="fallen">Ouch, you have fallen..</string>
    <string name="waiting_for_help">Waiting for help.</string>
    <string name="imOkay">I\'m okay</string>
    <string name="sendAlert">Send alert!</string>
    <string name="fillAllFields">Please fill all fields</string>
    <string name="alertSent">Alert sent!</string>
    <string name="titleHowToUse">How to use FallWatch?</string>
    <string name="textHowToUse">FallWatch uses acceleration sensors to detect sudden changes in your movement. You can
        either use your devices internal sensor or a external MetaMotionC sensor when using FallWatch. When using
     external sensor, you do not have to have your device with you to use the application. However, we highly
     recommend to have you device always nearby. You can turn the detection on/off from
        the home view.\n\nIn case of possible collision, FallWatch will ask you if you
     are okay. To this question you can either answer yes or no. If your answer is yes, FallWatch will send a text
    message to your two defined contacts. From this message your contacts will know that you have possibly injured
    yourself and also your current location.</string>
    <string name="titleHowToChangeSettings">How can I change my settings?</string>
    <string name="textHowToChangeSettings">From the left uppercorner of the application, you can find a navigation,
         which takes you the settings. From the settings you can choose to use internal/external sensor and change
         your user information. You can change your name that will be shown in the text message your contacts receives in
         case of collision. You can also change your contacts. Remember to press the "Apply" button to validate your
     latest settings.</string>
    <string name="titleApplicationOnOff">Does the application have to be active in order it to work?</string>
    <string name="textApplicationOnOff">No. You can turn the application off once you have set the detection on.
    FallWatch will continue detecting in the background even if the app is not active.</string>
    <string name="version">Version</string>
    <string name="versionNumber">1.0</string>
    <string name="contactUs">Contact us</string>
    <string name="contactUs1">+358405268536</string>
    <string name="contactUs2">+358445092182</string>
    <string name="toggleToDetect">Toggle to turn detection on and off.</string>
    <string name="toggleForInternal">Toggle to use internal sensor.</string>
    <string name="toggleForExternal">Toggle to use external sensor.</string>
    <string name="applyChanges">Click to apply your changes.</string>
    <string name="trackingOn">Tracking mode on.</string>
    <string name="trackingOff">Tracking mode off.</string>
</resources>
