<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="jamia.mikko.fallwatch.Register.RegisterActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/fillInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_marginTop="20dp"
        android:text="@string/fillInInfo"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/yourNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fillInText"
        android:layout_marginTop="20dp"
        android:text="@string/yourName" />

    <EditText
        android:id="@+id/yourNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourNameLabel" />

    <TextView
        android:id="@+id/firstContactLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourNameEdit"
        android:layout_marginTop="20dp"
        android:text="@string/contact1" />

    <EditText
        android:id="@+id/firstContactEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstContactLabel" />

    <TextView
        android:id="@+id/secondContactLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstContactEdit"
        android:layout_marginTop="20dp"
        android:text="@string/contact2" />

    <EditText
        android:id="@+id/secondContactEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondContactLabel" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondContactEdit"
        android:layout_marginTop="30dp"
        android:text="@string/apply" />
</RelativeLayout>
